# TRIP-ROS2-python-serial

./: README.md  package.xml  setup.cfg  setup.py
config/: robot_model.yaml  serial_config.yaml
trip_serial/: differential_drive.py  encoder.py  trip_base.py  trip_robot.py  trip_unicycle.py  utils.py
